--- a/components/index.html
+++ b/components/index.html
@@ -43,14 +43,14 @@
                 <!--SIDE BAR -->
                 <div class="side_bar">
                     <img src="img/aaron.jpg" />
-                    <span class="section">Aaron Judge</span></br>
+                    <span class="section">Aaron Judge</span><br>
                     Find out the Yankees star's favorite burrito bowl combination.
                 </div>
                 <!--SIDE BAR END -->
                 <!--SIDE BAR -->
                 <div class="side_bar">
                     <img src="img/mahomes.jpg" />
-                    <span class="section">Patrick Mahomes</span></br>
+                    <span class="section">Patrick Mahomes</span><br>
                     Find out what the NFL's best quarterback prefers at Chipotle.
 
                 </div>
@@ -58,7 +58,7 @@
                 <!--SIDE BAR -->
                 <div class="side_bar">
                     <img src="img/lebron.jpg" />
-                    <span class="section">LeBron James</span></br>
+                    <span class="section">LeBron James</span><br>
                     Click here to explore LeBron's favorite meals.
 
                 </div>
@@ -66,7 +66,7 @@
                 <!--SIDE BAR -->
                 <div class="side_bar">
                     <img src="img/lillard.jpg" />
-                    <span class="section">Damian Lillard</span></br>
+                    <span class="section">Damian Lillard</span><br>
                     Find out what Dame Time likes at Dinner Time.
 
                 </div>
@@ -77,14 +77,14 @@
                 <!--SIDE BAR -->
                 <div class="side_bar">
                     <img src="img/aaron.jpg" />
-                    <span class="section">Aaron Judge</span></br>
+                    <span class="section">Aaron Judge</span><br>
                     Find out the Yankees star's favorite burrito bowl combination.
                 </div>
                 <!--SIDE BAR END -->
                 <!--SIDE BAR -->
                 <div class="side_bar">
                     <img src="img/mahomes.jpg" />
-                    <span class="section">Patrick Mahomes</span></br>
+                    <span class="section">Patrick Mahomes</span><br>
                     Find out what the NFL's best quarterback prefers at Chipotle.
 
                 </div>
@@ -92,7 +92,7 @@
                 <!--SIDE BAR -->
                 <div class="side_bar">
                     <img src="img/lebron.jpg" />
-                    <span class="section">LeBron James</span></br>
+                    <span class="section">LeBron James</span><br>
                     Click here to explore LeBron's favorite meals.
 
                 </div>
@@ -100,7 +100,7 @@
                 <!--SIDE BAR -->
                 <div class="side_bar">
                     <img src="img/lillard.jpg" />
-                    <span class="section">Damian Lillard</span></br>
+                    <span class="section">Damian Lillard</span><br>
                     Find out what Dame Time likes at Dinner Time.
 
                 </div>
