--- a/secondary/css/grid.css
+++ b/secondary/css/grid.css
@@ -8,8 +8,9 @@
 
 
 .container {
-  width: 96%;
+  width: 800px;
   margin:auto;
+  align-items:center;
 
 }
 
@@ -45,6 +46,7 @@
   .col-2 img{
     width: 41.67%;
     height:120px;
+    margin-right:20px;
   }
 
 
@@ -97,5 +99,5 @@ div [class^="col"]:last-of-type {
 
 @keyframes col-2{
   from {transform:translate(0,0)}
-  to {transform:translate(-20px,-20px)}
+  to {transform:translate(9px,-20px)}
 }
